RESOLVED FIXED122266
[WinCairo] Compile error with VIDEO disabled.
https://bugs.webkit.org/show_bug.cgi?id=122266
Summary [WinCairo] Compile error with VIDEO disabled.
peavo
Reported 2013-10-03 05:40:36 PDT
When VIDEO is disabled, compiling WinCairo fails: dom\Document.cpp(5410): error C3861: 'isMediaElement': identifier not found dom\Document.cpp(5411): error C2227: left of '->enteredOrExitedFullscreen' must point to class/struct/union/generic type type is ''unknown-type'' dom\Document.cpp(5411): error C3861: 'toHTMLMediaElement': identifier not found
Attachments
Patch (1.25 KB, patch)
2013-10-03 05:44 PDT, peavo
no flags
peavo
Comment 1 2013-10-03 05:44:00 PDT
Brent Fulgham
Comment 2 2013-10-03 09:58:52 PDT
Comment on attachment 213242 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-10-03 10:23:24 PDT
Comment on attachment 213242 [details] Patch Clearing flags on attachment: 213242 Committed r156839: <http://trac.webkit.org/changeset/156839>
WebKit Commit Bot
Comment 4 2013-10-03 10:23:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.