[WinCairo] Compile error with VIDEO disabled. https://bugs.webkit.org/show_bug.cgi?id=122266

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-10-03
Reviewed by Brent Fulgham.

* dom/Document.cpp:
(WebCore::Document::dispatchFullScreenChangeOrErrorEvent): Protect with ENABLE(VIDEO) guard.

Canonical link: https://commits.webkit.org/140321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156839 268f45cc-cd09-0410-ab3c-d52691b4dbfc